works with textarea

--- a/examples/example2.html
+++ b/examples/example2.html
@@ -30,7 +30,7 @@
     <br>
 
     <!-- CodeMirror 6 -->
-    <script src="../dist/cm6.bundle.min.js"></script>
+    <script src="../dist/cm6.bundle.js"></script>
     <script>
         const oneDarkEl = document.getElementById("oneDark");
         const view = cm6.createEditorView(undefined, document.getElementById("editor"));
