--- a/examples/example3.html
+++ b/examples/example3.html
@@ -40,7 +40,7 @@
     <br>
 
     <!-- CodeMirror 6 -->
-    <script src="../dist/cm6.bundle.min.js"></script>
+    <script src="../dist/cm6.bundle.js"></script>
     <script>
         const statesEl = document.getElementById("states");
         const saveStateEl = document.getElementById("saveState");
